# robosapiens-trustworthiness-checker

./: .dockerignore  .gitignore  .vimspector.json  AGENTS.md  Cargo.toml  README.md  bacon.toml  counter_tri.dsrv  counter_tri_nodc.dsrv
.devcontainer/mesa/: devcontainer.json
.devcontainer/nogpu/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: backfill-benchmarks.yaml  container-tests.yaml  deploy-docs.yaml  ros-tests.yml  rust-only.yaml  rust.yml
.zed/: settings.default.json  settings.json  settings.ros-devcontainer.json
benches/: compilation_phases.rs  dataflow_semantics.rs  dsrv_paper.rs  dup_defer.rs  dyn_paper.rs  maple_sequence.rs  parsing.rs  simple_add.rs  special_constraints_add.rs  threshold_property.rs  time_dependent_property.rs
benchmarks/: data.js
docker/: Dockerfile  DockerfileDeploy  docker-compose.yaml  entrypoint.sh
docs/: .gitignore  QUICK_START.md  README.md  book.toml
docs/benchmark-dashboard/: all.html  dashboard.css  dashboard.js  index.html
docs/src/: SUMMARY.md  distributed-monitoring-counter-tri.md  distributed-monitoring-simple-add.md  distributed-monitoring.md  general-usage.md  introduction.md  reconfiguration.md
examples/: counter.dsrv  counter_inf.dsrv  counter_tri.input  counter_tri_distribution_graph.json  human_pose_estimation.lola  human_pose_estimation_map.json  iff_dsu.dsrv  iff_dsu.lola  iff_dsu_map.json  lambdas_and_folds.dsrv  lambdas_and_folds.input  latch.dsrv  latch.lola  list.input  list.lola  map.input  map.lola  maple_simple_seq.lola  maple_simple_single_topic.lola  moving_average.input  moving_average.lola  pal_human_waypoint_safety.dsrv  past.lola  recursive_types.dsrv  recursive_types_illtyped.dsrv  simple_add_async.input  simple_add_distributable.dsrv  simple_add_distributable_dist_constraints.dsrv  simple_add_illtyped.dsrv  simple_add_typed.dsrv  simple_stl.mstlo  update_defer.input  update_defer.lola
examples/distributed/: counter_tri.dsrv  distributed_paper.dsrv  distributed_paper_central.dsrv  distributed_paper_central_dist_graph.json  distributed_paper_central_map.json  distributed_paper_central_out_map.json  distributed_paper_dyn_dist.dsrv  distributed_paper_dyn_dist_graph.json  distributed_paper_dyn_dist_map.json  distributed_paper_map.json  distributed_paper_r1.dsrv  distributed_paper_r1_map.json  distributed_paper_r1_out_map.json  distributed_paper_r2.dsrv  distributed_paper_r2_map.json  distributed_paper_r2_out_map.json  distributed_paper_r3.dsrv  distributed_paper_r3_map.json  distributed_paper_r3_out_map.json  distributed_paper_r4.dsrv  distributed_paper_r4_map.json  distributed_paper_r4_out_map.json  mqtt_dist_echo.dsrv  mqtt_dist_echo.lola  mqtt_dist_echo_graph.dsrv  mqtt_dist_echo_graph.lola  mqtt_dist_echo_graph_mini.dsrv  mqtt_dist_echo_graph_mini.lola  not_working.dsrv  not_working_graph.json  not_working_map.json  not_working_out_map.json  ros_hello_world.lola  ros_hello_world_ros_map.json  simple_add_alt_constraints_distribution_graph.json  simple_add_distributable_alt_constraints.dsrv  simple_add_distributable_alt_constraints2.dsrv  simple_add_distributable_ros_in.json  simple_add_distributable_ros_in_full.json  simple_add_distributable_ros_out.json  (+1 more)
examples/dups/: dynamic_temporal_property.dsrv  guided_dup.dsrv
examples/dynamic_lola/: defer_default.lola  defer_recvs_update.dsrv  defer_recvs_update.input  dynamic_temporal_property.input  dynamic_temporal_property.lola  eval_default.lola  guided_dup.lola  overlap_dup.lola
examples/reconf_cmds/: assignment.json  counter.json
examples/ros/: counter_ros_output_map.json  (+3 more)
fixtures/: object_literal.input  object_literal_extra.input
integrations/: README.md
integrations/python/: Cargo.toml  README.md  pyproject.toml
integrations/python/src/: lib.rs
integrations/python/tests/: test_checker.py
libs/contiguous-tree/: Cargo.toml
libs/contiguous-tree-macros/: Cargo.toml
libs/contiguous-tree-macros/src/: cursor_derive.rs  lib.rs
libs/contiguous-tree-macros/src/tree_schema/: expand.rs  keyed_fields.rs  mod.rs  schema.rs
libs/contiguous-tree-macros/tests/: compile_fail.rs  keyed_fields.rs
libs/contiguous-tree-macros/tests/ui/: duplicate_variant.rs  duplicate_variant.stderr  unsupported_shape.rs  unsupported_shape.stderr
libs/contiguous-tree/src/: annotations.rs  arena.rs  builder.rs  cursor.rs  fields.rs  fold.rs  forest.rs  forest_map.rs  handle.rs  index.rs  lib.rs  node.rs  storage.rs  tests.rs  transform.rs  traversal.rs
libs/contiguous-tree/tests/: owned_constructors.rs
libs/tc-testutils/: Cargo.toml
libs/tc-testutils/src/: lib.rs  mqtt.rs  redis.rs  ros.rs  streams.rs  testcontainers.rs
scripts/: benchmark_backfill_matrix.py  generate_dataflow_diagrams.py  list_obj_to_json_print.py  merge_benchmark_backfill.py  migrate_criterion_history.py  prepare_historical_benchmarks.py  ros2_pub_file.sh  run_historical_benchmarks.py  test_many_times.zsh  use_zed_settings.sh  validate_benchmark_data.py
src/: ast.rs  async_runtime.rs  benches_common.rs  commandline_args.rs  constraint_based_runtime.rs  constraint_solver.rs  core.rs  dsrv_fixtures.rs  file_handling.rs  file_input_provider.rs  lib.rs  lola_fixtures.rs  lola_streams.rs  lola_type_system.rs  macros.rs  main.rs  manual_output_handler.rs  monitoring_semantics.rs  mqtt_client.rs  mqtt_input_provider.rs  mqtt_output_handler.rs  null_output_handler.rs  parser.rs  queuing_runtime.rs  ros_input_provider.rs  ros_topic_stream_mapping.rs  stdout_output_handler.rs  stream_utils.rs  type_checking.rs  typed_monitoring_combinators.rs  typed_monitoring_semantics.rs  untimed_monitoring_combinators.rs
tests/: cli_tests.rs  constraint_based_lola.rs  lola_fixtures.rs  mqtt_testcontainer.rs  runtime_tests.rs  test_distributed.rs  test_distributed_mqtt.rs  test_mqtt_input_provider.rs  test_mqtt_io.rs  test_mqtt_output_handler.rs  test_reconfigurable_distributed_work.rs  test_redis_io.rs  test_ros_input_provider.rs  test_ros_io.rs  typed_untimed_semantics_async.rs  untimed_semantics_async.rs  untimed_semantics_queuing.rs
(+257 files in other folders)
