[package]
name = "trustworthiness_checker"
version = "0.1.0"
edition = "2021"
default-run = "trustworthiness_checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
# console-subscriber = "0.4.0"
winnow = "0.6.20"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-stream = {version ="0.1.16", features=["full"] }
tokio-util = "0.7.12"
clap = { version = "4.5.20", features = ["derive"] }
async-stream = "0.3.6"
r2r = { version = "0.9.3", optional=true }
thiserror = "2.0.3"
justerror = "1.1.0"
serde = "1.0.215"
serde_json = "1.0.133"

[features]
ros = ["dep:r2r"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "simple_add"
harness = false

[[bin]]
name = "ros_monitor"
required-features=["ros"]