[package]
name = "trustworthiness_checker"
version = "0.1.0"
edition = "2021"
default-run = "trustworthiness_checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
# console-subscriber = "0.4.0"
winnow = "0.6.20"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-stream = {version ="0.1.16", features=["full"] }
tokio-util = "0.7.12"
clap = { version = "4.5.20", features = ["derive"] }
async-stream = "0.3.6"
r2r = { version = "0.9.3", optional=true }
thiserror = "2.0.9"
justerror = "1.1.0"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
# mqtt client
# Disable the default dependency on SSL to avoid a build dependency on OpenSSL
paho-mqtt = {version = "0.12.5", default-features=false, features=["bundled"]}
async-trait = "0.1.51"
async-once-cell = "0.5.4"

[features]
ros = ["dep:r2r"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "simple_add"
harness = false

# [[bench]]
# name = "maple_sequence"
# harness = false