[package]
name = "trustworthiness_checker"
version = "0.1.0"
edition = "2024"
default-run = "trustworthiness_checker"
exclude = ["examples/*", "scripts/*", "log/*", "benches/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[lib]
name = "trustworthiness_checker"
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
winnow = { version = "0.7.5", features = ["simd"] } # TODO: Update and fix breaking changes in v1.0.0
futures = "0.3.32"

clap = { version = "4.6.0", features = ["derive"] }
async-stream = "0.3.6"
r2r = { version = "0.9.5", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_json5 = "0.2.1"
# mqtt client
# Disable the default dependency on SSL to avoid a build dependency on OpenSSL
paho-mqtt = { version = "0.13.3", default-features = false, features = [
    "bundled",
    "ssl",
] } # TODO: Update and fix breaking changes in v0.14.0
async-trait = "0.1.89"
tracing = { version = "0.1.44", features = [
    "attributes",
    "std",
    "tracing-attributes",
    "async-await",
    "release_max_level_warn",
] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
strum = "0.28.0"
strum_macros = "0.28.0"
petgraph = { version = "0.8.3", features = ["serde-1"] }
enum_inner_method = { git = "https://github.com/mortenhaahr/enum_inner_method", tag = "v0.1.0" }
smol = "2.0.2"
async-unsync = "0.3.0"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"
async-compat = {version = "0.2.5", optional = true}
jemallocator = "0.5.4"
ecow = { version = "0.2.6", features = ["serde"] }
async_cell = "0.2.3"
async-channel = "2.5.0"
ordered-float = "5.1.0"
approx = "0.5.1"
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
contracts = "0.6.7"
static_assertions = "1.1.0"
thiserror = "2.0.18"
rand = "0.10.0"
unsync = "0.1.2"
itertools = "0.14.0"
redis = { version = "1.0.5", default-features = false, features = ["smol-comp"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
fs2 = "0.4.3"

[profile.dev-fast]
# Optimize build times for debug builds
# Note that this affects the information carried in the debug symbols,
# notably for RUST_BACKTRACE=1
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[features]
ros = ["dep:r2r", "tc-testutils/ros"]
testcontainers = ["tc-testutils/testcontainers", "async-compat"]
span-tracing = []

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_smol", "html_reports"] }
test-log = { version = "0.2.19", features = ["trace"] }
proptest = "1.10.0"
tc-testutils = { path = "libs/tc-testutils" }

[[bin]]
name = "work_scheduler"

[[bench]]
name = "simple_add"
harness = false

[[bench]]
name = "maple_sequence"
harness = false

[[bench]]
name = "dup_defer"
harness = false

[[bench]]
name = "dyn_paper"
harness = false

[[bench]]
name = "parsing"
harness = false

# [dev-dependencies.tc-testutils]
# path = "libs/tc-testutils"
