[package]
name = "contiguous-tree"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE.md"

[lib]
name = "contiguous_tree"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "contiguous-tree-macros/serde"]

[dependencies]
contiguous-tree-macros = { path = "../contiguous-tree-macros" }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
ecow = "0.3.0"
serde_json = "1.0.150"
