[package]
name = "tc-testutils"
version = "0.1.0"
edition = "2024"

[lib]
name = "tc_testutils"
path = "src/lib.rs"
bench = false

[features]
testcontainers = ["testcontainers-modules", "async-compat"]

[dependencies]
testcontainers-modules = { version = "0.14.0", optional = true, features = [
    "mosquitto",
    "redis",
] }
test-log = { version = "0.2.19", features = ["trace"] }
async-compat = {version = "0.2.5", optional = true}
tracing = { version = "0.1.44", features = [
    "attributes",
    "std",
    "tracing-attributes",
    "async-await",
    "release_max_level_warn",
] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
trustworthiness_checker = { path = "../../" }
futures = "0.3.32"
serde_json = "1.0.149"
serde = { version = "1.0.219", features = ["derive", "rc"] }
# mqtt client
# Disable the default dependency on SSL to avoid a build dependency on OpenSSL
paho-mqtt = { version = "0.13.3", default-features = false, features = [
    "bundled",
    "ssl",
] }
redis = { version = "1.0.3", features = ["smol-comp"] }
redis-macros = "1.0.1"
anyhow = { version = "1.0.101", features = ["backtrace"] }
# unsync = "0.1.2"
smol = "2.0.2"
async-unsync = "0.3.0"
async-stream = "0.3.6"
unsync = "0.1.2"
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"
futures-timeout = "0.1.3"
